--- a/style.css
+++ b/style.css
@@ -33,11 +33,17 @@ td, th {
     text-align: center;
 }
 div{
-    padding-top: 10px;
+    padding-top: 15px;
 }
 h1{
-    color:#468BC1;
+    color:#376C97;
 }
 h2{
-    color:#549DD7;
+    color:#3D7AAA;
+}
+h3{
+    color: #549DD7;
+}
+h4{
+    color:#5CA7E2;
 }
